--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-error-boundary": "^3.1.4",
     "react-helmet-async": "^1.3.0",
     "react-hotkeys-hook": "^3.4.6",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.2"
   },
