--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mui/system": "^5.8.1",
     "@mui/utils": "^5.8.0",
     "axios": "^0.27.2",
+    "html2canvas": "^1.4.1",
     "is-mobile": "^3.1.1",
     "js-file-downloader": "^1.1.24",
     "jspdf": "^2.5.1",
